kubernetes/Int/deployments/default/fastapi-dls/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-dls
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: fastapi-dls
  template:
    metadata:
      labels:
        app: fastapi-dls
    spec:
      containers:
        - name: fastapi-dls
          image: collinwebdesigns/fastapi-dls:1.4.0
          volumeMounts:
            - name: cert-webserver
              mountPath: /app/cert
              readOnly: true
            - name: pvc
              mountPath: /app/cert/instance
              subPath: instanceCerts
            - name: pvc
              mountPath: /app/database
              subPath: database
      volumes:
        - name: pvc
          persistentVolumeClaim:
            claimName: fastapi-dls
        - name: cert-webserver
          secret:
            secretName: production-tls
            items:
            - key: tls.crt
              path: webserver.crt
            - key: tls.key
              path: webserver.key
